# cs5432-bsky-labeler

./: .env.sample  .gitignore  README.md  hw2.md  hw_desc.md  package-lock.json  package.json  pyproject.toml
outcome/: eval_1.txt  eval_2.txt  eval_3.txt  eval_4.txt
src/: README.md  comprehensive_evaluation.py  get_labels_test.py  get_post_test.py  test_labeler.py
src/labeler-inputs/: char_substitutions.json  harmful_words.txt  homophones.json  news-domains.csv  spoonerisms.json  t-and-s-domains.csv  t-and-s-words.csv
src/pylabel/: __init__.py  automated_labeler.py  label.py  policy_proposal_labeler.py
src/test-data/: collect_evasion_test_data.py  collect_normal_posts.py  input-posts-cite.csv  input-posts-dogs.csv  input-posts-t-and-s.csv  linguistic_evasion_test_posts.csv
